XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* Add a shortcut in the 'Open file' dialog to the directory where the
  current tab file (if so) is.
* Add file to the recent files list at the time of closing a tab as well
  (not only at the time of opening). Otherwise a file is not there when it
  was loaded from a command line and then its tab is closed.
* Do not loose the current editor position when there was an incremental
  search on a tab and then another tab is closed.
* Prevent loosing selection in case switching between history positions
  if nothing has been changed in the required buffer.
* Have the find-in-files dialog interruptible at the stage of building
  the list of files to search in.

2012 Oct 31 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.7
* Bug fix: core dump if 'Cancel' is clicked in a dialog window. It is caused
  by saving the last focus widget and excessive generation of
  QT activate/deactivate signals.
* Shift+Tab intercepted properly in the editor window in Windows based X
  Server. Issue #334
* Early logging on Windows based X Server could lead to crashes so some
  warnings were delayed.
* Setting the default encoding to 'utf-8' for codimension itself.
* Explicitly pass focus to the current editor when codimension is activated.


2012 Sep 17  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.6
* New feature: PythonTidy integration and diff viewers
* New Project button is removed from the main window toolbar
* New feature: copying a diagram to the clipboard (main menu and Ctrl+C)
* New feature: new file template support for the case when no new
  project is loaded. UI to create/edit/delete new file templates added.
* Editor settings are moved from the main toolbar button with menu to the
  introduced main menu 'Options'
* New feature: unused class/function/global variable analysis
* New feature: find occurences for classes/functions/global variables viewers
* Bug fix: incorrect file icons in the editing history